--- a/manifest.yml
+++ b/manifest.yml
@@ -1,10 +1,11 @@
 applications:
 - name: pal-tracker
   path: build/libs/pal-tracker.jar
-  random-route: true
+  routes:
+    - route: pal-tracker-56F6F27F-4093-44AE-A674-0C982F7E1C96.cfapps.io
   memory: 768M
   disk_quota: 256M
   buildpacks:
     - java_buildpack
   env:
-    WELCOME_MESSAGE: Hello from Cloud Foundry
+    WELCOME_MESSAGE: Hello from the review environment
