--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,15 @@ dependencies {
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.12'
 
+    // To use Spring Cloud Connectors for development
+    compile 'org.springframework.cloud:spring-cloud-localconfig-connector'
+
+    // If you intend to deploy the app to Cloud Foundry
+    compile 'org.springframework.cloud:spring-cloud-cloudfoundry-connector'
+    compile 'org.springframework.cloud:spring-cloud-spring-service-connector'
+
+    compile "org.springframework.boot:spring-boot-configuration-processor"
+
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
@@ -41,3 +50,6 @@ flyway {
 task testMigrate(type: org.flywaydb.gradle.task.FlywayMigrateTask) {
     url = testDbUrl
 }
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
