--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,10 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
     compile("org.springframework.boot:spring-boot-starter-jdbc")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
 
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.12'
@@ -30,14 +32,16 @@ dependencies {
 
 def developmentDbUrl = "jdbc:mysql://localhost:3306/tracker_dev?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 bootRun.environment([
-        "WELCOME_MESSAGE": "hello",
+        "MANAGEMENT_SECURITY_ENABLED": false,
         "SPRING_DATASOURCE_URL": developmentDbUrl,
+        "WELCOME_MESSAGE": "hello",
 ])
 
 def testDbUrl = "jdbc:mysql://localhost:3306/tracker_test?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 test.environment([
-        "WELCOME_MESSAGE": "Hello from test",
+        "MANAGEMENT_SECURITY_ENABLED": false,
         "SPRING_DATASOURCE_URL": testDbUrl,
+        "WELCOME_MESSAGE": "Hello from test",
 ])
 
 flyway {
@@ -49,6 +53,10 @@ flyway {
 
 task testMigrate(type: org.flywaydb.gradle.task.FlywayMigrateTask) {
     url = testDbUrl
+}
+
+springBoot {
+    buildInfo()
 }
 
 sourceCompatibility = 1.8
