--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.springframework.boot:spring-boot-starter-security")
 
     compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
 
@@ -32,6 +33,7 @@ dependencies {
 
 def developmentDbUrl = "jdbc:mysql://localhost:3306/tracker_dev?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 bootRun.environment([
+        "HTTP_DISABLED": true,
         "MANAGEMENT_SECURITY_ENABLED": false,
         "SPRING_DATASOURCE_URL": developmentDbUrl,
         "WELCOME_MESSAGE": "hello",
@@ -39,6 +41,7 @@ bootRun.environment([
 
 def testDbUrl = "jdbc:mysql://localhost:3306/tracker_test?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 test.environment([
+        "HTTP_DISABLED": true,
         "MANAGEMENT_SECURITY_ENABLED": false,
         "SPRING_DATASOURCE_URL": testDbUrl,
         "WELCOME_MESSAGE": "Hello from test",
