--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 
 def developmentDbUrl = "jdbc:mysql://localhost:3306/tracker_dev?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 bootRun.environment([
-        "HTTP_DISABLED": true,
+        "HTTPS_DISABLED": true,
         "MANAGEMENT_SECURITY_ENABLED": false,
         "SPRING_DATASOURCE_URL": developmentDbUrl,
         "WELCOME_MESSAGE": "hello",
@@ -41,7 +41,7 @@ bootRun.environment([
 
 def testDbUrl = "jdbc:mysql://localhost:3306/tracker_test?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 test.environment([
-        "HTTP_DISABLED": true,
+        "HTTPS_DISABLED": true,
         "MANAGEMENT_SECURITY_ENABLED": false,
         "SPRING_DATASOURCE_URL": testDbUrl,
         "WELCOME_MESSAGE": "Hello from test",
